# xio

./: .gitignore  CMakeLists.txt  README.md  xio-log.html  xio.sln
docs/: 3rdpartylicenses.txt  es2015-polyfills.js  index.html  main.08c25930d878ec478743.js  main.0c2149015d7d6dfa4318.js  main.0d707ce472c6e9d78cb4.js  main.2a4ebc4a7f9a6a4cddbb.js  main.34a66a9f86778497c52a.js  main.3b2cf8b9e6b6e423ead0.js  main.43bac4c839f22d9b6dd8.js  main.48c6b7fc0f064678ee06.js  main.4dbe0423f189447721a9.js  main.68d0bfc5f259e1a8ccaa.js  main.700527863cbbc7badd8f.js  main.733921ada17d61223651.js  main.8e19129210570a26d802.js  main.92440afbe0cbcd6c9da5.js  main.9485337efec407123000.js  main.bf7380e0a4a02335625c.js  main.c77d11b920f522d5a857.js  main.ebf7c5efc35dc8c919c8.js  main.eefcc35e620218b5ccaf.js  main.fb594041fe460b827b74.js  main.fc72203406f3a25ab1e8.js  main.js  main.js.map  polyfills.js  styles.js  styles.js.map
docs/assets/: hacked-particles-index.js  particlesjs-config.json
include/xio/: interpreter.c++  interpreter.h  xioapi.h
interpreter/: CMakeLists.txt  interpreter.vcxproj  interpreter.vcxproj.filters  xio.vcxproj.filters
interpreter/include/xio/interpreter/: alu.h  bloc.h  interpreter.h  interpreterdll.h  teacc_idl.h  var.h  xio.h
interpreter/include/xio/interpreter/parsers/: ast.h  grammar.h  parsers.h
interpreter/src/: alu.cc  ast.cc  bloc.cc  grammar.cc  interpreter.cc  parsers.cc  teacc_i.cc  teacc_idl.cc  var.cc  xio.cc
lexer/: CMakeLists.txt  lexer.vcxproj  lexer.vcxproj.filters
lexer/include/xio/lexer/: lexer.h  lexerdll.h  rtlx_lexer.h  token_t.h
lexer/src/: lexer.cc  rtlx_lexer.cc  token_t.cc
logbook/: CMakeLists.txt  logbook.vcxproj  logbook.vcxproj.filters
logbook/include/xio/logbook/: book.h  colors.h  document_element.h  logbook.h  logbookapi.h  logfmt.h  writer.h
logbook/src/: book.cc  colors.cc  document_element.cc  logbook.cc  logfmt.cc
src/: interpreter.c++
tdd/: CMakeLists.txt  tdd.cc  tdd.h  tdd.vcxproj  tdd.vcxproj.filters
utils/: CMakeLists.txt  utils.vcxproj  utils.vcxproj.filters
utils/include/utils/: xio.utils
utils/include/xio/utils/: cargs.h  collection.h  expect  expect.h  journal.h  notification.h  rtloader.h  rtlx.h  xchronos  xchronos.h  xio.utils  xloader.h  xplugin.h  xreturn  xreturn.h  xstr.h
utils/src/: cargs.cc  collection.cc  expect.cc  journal.cc  notification.cc  rtloader.cc  rtlx.cc  xchronos.cc  xloader.cc  xplugin.cc  xreturn.cc  xstr.cc
xdb/: CMakeLists.txt
xdb/sqlite3/: CMakeLists.txt  sqlite3.vcxproj  sqlite3.vcxproj.filters
xdb/sqlite3/include/xio/sqlite3/: sqlitedb.h
xdb/sqlite3/include/xio/sqlitedb/: sqlite3api.h  sqlitedb.h
xdb/sqlite3/src/: sqlitedb.cc
xio/: CMakeLists.txt  xio.vcxproj
xio++/: dlloader.cxx  dlloader.hpp  expect.hpp  message.cxx  message.hpp  object.cxx  object.hpp  string_t.cxx  string_t.hpp  time_stamp.cxx  time_stamp.hpp  xio++.hpp  xio++.vcxproj  xio++.vcxproj.filters  xtypes.cxx  xtypes.hpp
xio++/interpreter/: interpreter.cxx  interpreter.hpp  module.cxx  module.hpp
xio++/interpreter/compiler/: ast.cxx  ast.hpp  compiler.cxx  compiler.hpp  grammar.cxx  grammar.hpp  lexer.cxx  lexer.hpp
xio++/interpreter/kernel/: alu.cxx  alu.hpp  bloc.cxx  bloc.hpp  calculus.cxx  calculus.hpp  function_t.cxx  function_t.hpp  stack.cxx  stack.hpp  variable.cxx  variable.hpp  xio.cxx  xio.hpp  xio_bloc.cxx  xio_bloc.hpp
xio++/journal/: journal.cxx  journal.hpp  logger.cxx  logger.hpp  w3-colors-metro.hpp
xio.exe/: CMakeLists.txt  Calulator.cxx  Calulator.hpp  ansi.cxx  ansi.hpp  xio.exe.vcxproj  xio.exe.vcxproj.filters
xio/include/xio/interpreter/: interpreter.h
xioapp/: CMakeLists.txt  ansi.cxx  ansi.hpp
